# kafka_with_python

gamers/: Dockerfile.dev  pyproject.toml
gamers/app/: main.py  players.proto  players_pb2.py
