[tool.poetry]
name = "kafka-python"
version = "0.1.0"
description = ""
authors = ["Muhammad Aamir Azhar <125334680+aamirazhar122@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlmodel = "^0.0.18"
aiokafka = "^0.10.0"
protobuf = "^5.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
